--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^4.6.2",
     "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.5",
@@ -20,7 +21,7 @@
   "devDependencies": {
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
-    "eslint": "^4.10.0",
+    "eslint": "^4.11.0",
     "eslint-config-rallycoding": "^3.2.0",
     "jest": "21.2.1",
     "react-test-renderer": "16.0.0-beta.5"
