--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-native": "4.0.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "enzyme": "^3.3.0",
     "eslint": "^4.11.0",
     "eslint-config-rallycoding": "^3.2.0",
     "jest": "21.2.1",
+    "jest-serializer-enzyme": "^1.0.0",
     "react-test-renderer": "16.0.0-beta.5"
   },
   "jest": {
