--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,10 @@ buck-out/
 \.buckd/
 *.keystore
 
+# TESTS
+#
+src/__tests__
+
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
