--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-popup": "^0.6.1",
     "react-native-progress": "^3.4.0",
     "react-native-router-flux": "^4.0.0-beta.22",
-    "react-native-slider": "^0.11.0"
+    "react-native-slider": "^0.11.0",
+    "react-native-ui-kitten": "^3.0.0"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
