--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-animatable": "^1.2.4",
     "react-native-datepicker": "^1.6.0",
     "react-native-display": "^1.0.8",
+    "react-native-keyboard-aware-scroll-view": "^0.4.3",
     "react-native-popup": "^0.6.1",
     "react-native-progress": "^3.4.0",
     "react-native-router-flux": "^4.0.0-beta.22",
